[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/Fonts/Backto1982/BACKTO1982.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/MainMenu/Animation/MainMenuLabyrinthAnim.tres" type="Animation" id=2]
[ext_resource path="res://Components/MainMenuComponents/ExitPanel/ExitPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Components/UIButtons/MainMenuButtonGroup.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/MainMenu/Textures/LabyrinthImg.tres" type="Texture" id=5]
[ext_resource path="res://Components/MainMenuComponents/SettingsUI/Settings.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/MainMenu/Textures/DivisionSignImg.tres" type="Texture" id=7]
[ext_resource path="res://Scenes/MainMenu/Parallax/BackgroundMM.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/MainMenu/Textures/MultiplicationSignImg.tres" type="Texture" id=9]
[ext_resource path="res://Assets/FinalAssets/Numbers.png" type="Texture" id=10]
[ext_resource path="res://Scenes/MainMenu/Textures/AdditionSignImg.tres" type="Texture" id=11]
[ext_resource path="res://Scenes/MainMenu/Textures/SubtractionSignImg.tres" type="Texture" id=12]
[ext_resource path="res://Components/Button/Button.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/Fonts/source-sans-pro/SourceSansPro-Black.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Scenes/MainMenu/Particles/MainMenuBGParticles.tres" type="Material" id=15]
[ext_resource path="res://Scenes/MainMenu/MainMenu.gd" type="Script" id=16]
[ext_resource path="res://Scenes/MainMenu/Textures/PanelBG.tres" type="Texture" id=17]
[ext_resource path="res://Assets/Fonts/source-sans-pro/SourceSansPro-Bold.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://Assets/Fonts/source-sans-pro/SourceSansPro-Semibold.ttf" type="DynamicFontData" id=19]

[sub_resource type="CanvasItemMaterial" id=7]
particles_animation = true
particles_anim_h_frames = 10
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="DynamicFont" id=14]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=18]
size = 36
outline_size = 2
extra_spacing_top = -8
extra_spacing_bottom = -5
extra_spacing_char = 4
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=19]
size = 24
outline_size = 2
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=20]
size = 24
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=16]
size = 18
outline_size = 2
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=17]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 14 )

[node name="MainMenu" type="Node"]
script = ExtResource( 16 )
__meta__ = {
"_editor_description_": ""
}

[node name="Background" parent="." instance=ExtResource( 8 )]

[node name="MainMenuContainer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="MainMenuContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="MainMenuUI" type="Control" parent="MainMenuContainer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Particles2D" type="Particles2D" parent="MainMenuContainer/MainMenuUI"]
material = SubResource( 7 )
position = Vector2( 320, -24 )
z_index = -1
amount = 15
lifetime = 5.0
process_material = ExtResource( 15 )
texture = ExtResource( 10 )

[node name="LabyrinthImage" type="Control" parent="MainMenuContainer/MainMenuUI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Labyrinth" type="TextureRect" parent="MainMenuContainer/MainMenuUI/LabyrinthImage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -344.0
margin_top = -164.0
margin_right = 56.0052
margin_bottom = 230.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 7

[node name="Divide" type="TextureRect" parent="MainMenuContainer/MainMenuUI/LabyrinthImage/Labyrinth"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 97.9994
margin_top = -125.0
margin_right = 138.0
margin_bottom = -85.0013
texture = ExtResource( 7 )
stretch_mode = 6

[node name="Multiply" type="TextureRect" parent="MainMenuContainer/MainMenuUI/LabyrinthImage/Labyrinth"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.001
margin_top = -93.0
margin_right = -94.0002
margin_bottom = -53.0024
texture = ExtResource( 9 )
stretch_mode = 6

[node name="Plus" type="TextureRect" parent="MainMenuContainer/MainMenuUI/LabyrinthImage/Labyrinth"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -183.001
margin_top = -24.0
margin_right = -143.001
margin_bottom = 16.0
texture = ExtResource( 11 )
stretch_mode = 6

[node name="Minus" type="TextureRect" parent="MainMenuContainer/MainMenuUI/LabyrinthImage/Labyrinth"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 129.999
margin_top = -33.0
margin_right = 169.999
margin_bottom = 7.0
texture = ExtResource( 12 )
stretch_mode = 6

[node name="Label" type="Label" parent="MainMenuContainer/MainMenuUI"]
margin_left = 40.0
margin_top = 56.0
margin_right = 413.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 14 )
text = "BLOCKEZCAPE"

[node name="Buttons" type="Control" parent="MainMenuContainer/MainMenuUI"]
anchor_top = 0.5
anchor_bottom = 0.5

[node name="ButtonGroup" parent="MainMenuContainer/MainMenuUI/Buttons" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 64.0
margin_top = -52.0
margin_right = 176.0
margin_bottom = 88.0

[node name="ResetSaves" type="Control" parent="MainMenuContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="MainMenuContainer/ResetSaves"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.588235 )

[node name="NinePatchRect" type="NinePatchRect" parent="MainMenuContainer/ResetSaves"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -235.0
margin_top = -139.0
margin_right = 235.0
margin_bottom = 139.0
texture = ExtResource( 17 )
patch_margin_left = 6
patch_margin_top = 8
patch_margin_right = 6
patch_margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuContainer/ResetSaves/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -169.0
margin_top = -115.5
margin_right = 169.0
margin_bottom = 115.5
custom_constants/separation = 15
alignment = 1

[node name="Label2" type="Label" parent="MainMenuContainer/ResetSaves/NinePatchRect/VBoxContainer"]
margin_top = 1.0
margin_right = 338.0
margin_bottom = 34.0
custom_colors/font_color = Color( 1, 0.121569, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 18 )
text = "WARNING !"
align = 1
valign = 1

[node name="RichTextLabel" type="RichTextLabel" parent="MainMenuContainer/ResetSaves/NinePatchRect/VBoxContainer"]
margin_top = 49.0
margin_right = 338.0
margin_bottom = 177.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_fonts/bold_font = SubResource( 19 )
custom_fonts/normal_font = SubResource( 20 )
bbcode_enabled = true
bbcode_text = "[center]New Game will [b]LOSE[/b] 
Current Progress including 
[b]LEVELS[/b] and [b]RECORDS[/b].
Do you want to Proceed ?[/center]"
text = "New Game will LOSE 
Current Progress including 
LEVELS and RECORDS.
Do you want to Proceed ?"
fit_content_height = true

[node name="Label" type="Label" parent="MainMenuContainer/ResetSaves/NinePatchRect/VBoxContainer"]
visible = false
margin_top = 70.0
margin_right = 338.0
margin_bottom = 171.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 16 )
text = "New Game will LOSE 
Current Progress including 
LEVELS and RECORDS.
Do you want to Proceed ?"
align = 1
valign = 1

[node name="ButtonGroup" type="HBoxContainer" parent="MainMenuContainer/ResetSaves/NinePatchRect/VBoxContainer"]
margin_top = 192.0
margin_right = 338.0
margin_bottom = 229.0
custom_constants/separation = 50
alignment = 1

[node name="Yes" parent="MainMenuContainer/ResetSaves/NinePatchRect/VBoxContainer/ButtonGroup" instance=ExtResource( 13 )]
margin_left = 95.0
margin_right = 147.0
margin_bottom = 37.0
focus_mode = 1
custom_fonts/font = SubResource( 17 )
text = "YES"

[node name="No" parent="MainMenuContainer/ResetSaves/NinePatchRect/VBoxContainer/ButtonGroup" instance=ExtResource( 13 )]
margin_left = 197.0
margin_right = 242.0
margin_bottom = 37.0
focus_mode = 1
custom_fonts/font = SubResource( 17 )
text = "NO"

[node name="Settings" parent="MainMenuContainer" instance=ExtResource( 6 )]
visible = false

[node name="ExitPanel" parent="MainMenuContainer" instance=ExtResource( 3 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "LabyrinthAnim"
anims/LabyrinthAnim = ExtResource( 2 )
